--- a/.github/workflows/simple-pipe.yml
+++ b/.github/workflows/simple-pipe.yml
@@ -46,6 +46,12 @@ jobs:
     #
     # - name: Build with Gradle 8.5
     #   run: gradle build
+    
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: greetings-jar
+        path: build/libs
 
   dependency-submission:
 
