--- a/.github/workflows/simple-pipe.yml
+++ b/.github/workflows/simple-pipe.yml
@@ -53,6 +53,20 @@ jobs:
         name: greetings-jar
         path: build/libs
 
+  test-run:
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Download candidate artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: greetings-jar
+    - shell: bash
+      run: |
+        java -jar gree†ings-actions.jar ${{ github.event.inputs.myValues }}
+        
   dependency-submission:
 
     runs-on: ubuntu-latest
