--- a/.github/workflows/simple-pipe.yml
+++ b/.github/workflows/simple-pipe.yml
@@ -66,6 +66,20 @@ jobs:
     - shell: bash
       run: |
         java -jar greetings-actions.jar ${{ github.event.inputs.myValues }}
+
+  count-args:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - id: report-count
+      uses: tbeal/arg-count-action@main
+      with:
+        arguments-to-count: ${{ github.event.inputs.myValues }}
+    - run: echo
+    - shell: bash
+      run: |
+        echo argument count is ${{ steps.report-count.outputs.arg-count }}
         
   dependency-submission:
 
