--- a/.github/workflows/simple-pipe.yml
+++ b/.github/workflows/simple-pipe.yml
@@ -63,9 +63,20 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: greetings-jar
-    - shell: bash
-      run: |
-        java -jar greetings-actions.jar ${{ github.event.inputs.myValues }}
+#added java run directly instead of via bash
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Run Java directly here
+      run: java -jar greetings-actions.jar ${{ github.event.inputs.myValues }}
+
+#added java run directly instead of via bash
+        
+  #   - shell: bash
+  #     run: |
+  #       java -jar greetings-actions.jar ${{ github.event.inputs.myValues }}
 
   count-args:
 
